--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <title>My Notes</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   </body>
 </html>
